--- a/ex001.html
+++ b/ex001.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Script</title>
-    <script src="script.js"></script>
+    <script src="script001.js"></script>
     <script>
         function msg(){
         alert("Não confie em botões alheios!");
     }
     </script> 
     <script>
-       function piK(){
-        alert("penes sao polemicus");
+       function msg2(){
+        alert("Simplesmente um aviso");
        }
        
        
@@ -24,7 +24,7 @@
     <div class="container" style="display: flex; align-items: center; justify-content: center; flex-direction: column; height: 100vh;">
         <h1 id="title">Clique imediatamente nos botão</h1>
         <input type="button" value="Ver mensagem" onclick="msg();">
-        <input type="button" value="Pênes" onclick="piK();">
+        <input type="button" value="Aviso" onclick="msg2();">
         <input type="button" value="Change" onclick="change();">
         <input type="button" value="Dischange" onclick="dischange();">
     </div>
